# xonaix-library

./: .gitignore  CLAUDE.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
specs/_governance/: AUDIT_CONTRACT.md  DISTRIBUTION_EXCLUSIONS.md  GIT_WORKFLOW_CONTRACT.md  LIBRARY_SEALING_CONTRACT.md  LIBRARY_STANDARD_HEADER_CONTRACT.md  NO_DEBT_RULES.md  UNIT_REGISTRY.json  XONAIX_SELF_GOVERNANCE_CONTRACT.md
specs/_governance/manifests/: MANIFEST_governance.sha256.json
specs/_roadmap/: CORTEX_GUARDIAN_SPEC.md  MULTI_PARTY_GOVERNANCE_SPEC.md  SESSION_CONTEXT.md  VISION.md  ZEROPOINT_INTEGRATION_SPEC.md
specs/meta/language-template/: TEMPLATE_LANGUAGE_STANDARD.md  UNIT.json
specs/meta/standards-index/: CHANGELOG.md  STANDARDS_INDEX.md  UNIT.json
specs/standards/c/: STANDARDS_C.md  UNIT.json
specs/standards/cpp/: CHANGELOG.md  STANDARDS_CPP.md  UNIT.json
specs/standards/json/: STANDARDS_JSON.md  UNIT.json
specs/standards/nats/: STANDARDS_NATS.md  UNIT.json
specs/standards/nodejs/: CHANGELOG.md  STANDARDS_NODEJS.md  UNIT.json
specs/standards/python/: CHANGELOG.md  STANDARDS_PYTHON.md  UNIT.json
specs/standards/rust/: STANDARDS_RUST.md  UNIT.json
specs/standards/sql/: STANDARDS_SQL.md  UNIT.json
specs/standards/sveltekit/: CHANGELOG.md  STANDARDS_SVELTEKIT.md  UNIT.json
specs/standards/tauri/: CHANGELOG.md  STANDARDS_TAURI.md  UNIT.json
specs/standards/toml/: UNIT.json  (+1 more)
tools/xonaix-library-tools/: Cargo.toml
tools/xonaix-library-tools/src/: doctor.rs  enforce.rs  header.rs  main.rs  manifest.rs  report.rs  unit.rs
(+8 files in other folders)
